--- a/frontend/src/components/PageLoader.css
+++ b/frontend/src/components/PageLoader.css
@@ -1,8 +1,16 @@
 .GenericProgress-Container {
-  background: #fff;
+  position: fixed; /* Cover the entire viewport */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8); /* Transparent white background */
   color: #000;
-  text-align: center;
-  margin: 75px auto;
+  display: flex; /* Flexbox for loader placement */
+  align-items: flex-start; /* Align loader to the top */
+  justify-content: center; /* Center loader horizontally */
+  padding-top: 250px; /* Add some space from the top */
+  z-index: 9999; /* Ensure it is above all other elements */
 }
 
 .page-loader {
@@ -25,6 +33,7 @@
 .page-loader:after {
   scale: -1;
 }
+
 @keyframes l10 {
   50% {
     clip-path: inset(0);
